# C-plus-plus

./: .gitignore  README.md
common_tasks/: README.md
common_tasks/task1/: Makefile  solve_quadratic.cpp
common_tasks/task1/scripts/: run.sh
common_tasks/task10.1/: main.cpp
common_tasks/task10.1/scripts/: run.sh
common_tasks/task2/: Makefile  common_letters.cpp
common_tasks/task2/scripts/: run.sh
common_tasks/task3/: Makefile  Time.cpp  Time.h  main.cpp  run.sh
common_tasks/task4/: Makefile  Time.cpp  Time.h  Time.hpp  main.cpp  run.sh
common_tasks/task5/: CMakeLists.txt  main.cpp
common_tasks/task5/scripts/: build.sh  run.sh  run_tests.sh
common_tasks/task5/source/: Time.cpp  Time.h
common_tasks/task5/tests/: CMakeLists.txt  Time_test.cpp
common_tasks/task6.1/: CMakeLists.txt  main.cpp
common_tasks/task6.1/source/: Time.cpp  Time.hpp
common_tasks/task6.2/: main.cpp
common_tasks/task6.2/scripts/: run_main.sh
common_tasks/task6.2/source/: Time.cpp  Time.hpp
common_tasks/task7.1/: CMakeLists.txt  main.cpp
common_tasks/task7.1/source/: SimpleWatch.cpp  SimpleWatch.hpp  Time.cpp  Time.h  Time.hpp  Watch.cpp  Watch.hpp
common_tasks/task7.2/: CMakeLists.txt  main.cpp
common_tasks/task7.2/source/: Clock.hpp  CuckooClock.hpp  SigmaClock.hpp  SmartWatch.hpp  Time.cpp  Time.hpp  WallClock.hpp
common_tasks/task8/: CMakeLists.txt  main.cpp
common_tasks/task8.1/: main.cpp
common_tasks/task8/source/: amphibious.hpp  bird.hpp  generic_creature.hpp  ocean_creature.hpp  terrestrial_creature.hpp  waterfowl.hpp
common_tasks/task9.1/: main.cpp
common_tasks/task9.2/: CMakeLists.txt  main.cpp
task0/: task0a.md
task0/task0b/: Makefile  README.md  word_count.cpp
task1a/: CMakeLists.txt  Makefile  README.md
task1a/include/: BitArray.h
task1a/scripts/: run.sh
task1a/source/: BitArray.cpp  BitArray.hpp  main.cpp
task1a/src/: BitArray.cpp
task1a/tests/: BitArrayTest.cpp  CMakeLists.txt  short header
task2a/: CMakeLists.txt  README.md
task2a/config/: default_matrix.conf
task2a/config/matrices/: Balanced Trade-off.conf  Extreme Payoff for Solo Betrayal.conf  Rewarding Cooperation, Deterring Betrayal.conf  Strict Punishment for Betrayal.conf
task2a/config/strategies/: AdaptiveCooperator.conf
task2a/images/: task2a.drawio
task2a/scripts/: detailed_scenario.sh  fast_scenario.sh  run.sh  run_detailed.sh  test.sh  tournament_scenario.sh
task2a/source/: main.cpp  types.hpp
task2a/source/GameMatrix/: GameMatrix.cpp  GameMatrix.hpp  MatrixReader.cpp  MatrixReader.hpp
task2a/source/History/: History.cpp  History.hpp
task2a/source/Simulation/: Renderer.cpp  Renderer.hpp  Simulation.cpp  Simulation.hpp  simulation_function.cpp  simulation_function.hpp
task2a/source/strategies/: MetaStrategy.hpp  Strategy.hpp  StrategyFactory.cpp  StrategyFactory.hpp
task2a/source/strategies/StrategyConfig/: StrategyConfig.cpp  StrategyConfig.hpp
task2a/source/strategies/concrete/: AlwaysCooperate.cpp  AlwaysDefect.cpp  ConsensusMetaStrategy.cpp  Eye4eye.cpp  RandomChoice.cpp
task2a/source/strategies/concrete/AdaptiveCooperator/: AdaptiveCooperator.cpp  AdaptiveCooperator.hpp
task2a/source/utils/: CommandLineParser.cpp  CommandLineParser.hpp  HashUtils.hpp  SimulationParams.hpp
task2a/source/utils/SimulationParams/: SimulationParams.cpp  SimulationParams.hpp
task2a/tests/: CMakeLists.txt  test_GameMatrix.cpp  test_Utils.cpp
task3/: .gitignore  CMakeLists.txt
task3/configs/: config.txt
task3/scripts/: build.sh  run.sh
task3/source/: WAV_channel.cpp  WAV_channel.h  converter.cpp  converter.h  editor.cpp  editor.h  main.cpp  parser.cpp  parser.h  state.h
